--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@
         const formMessage = document.getElementById('form-message');
 
         // 🛑 CRITICAL: REPLACE this placeholder with your actual Formspree Submission URL (e.g., https://formspree.io/f/xxxxxxxx)
-        const FORMSPREE_URL = "https://formspree.io/f/xblzadjw"; 
+        const FORMSPREE_URL = "URL"; 
 
         // 2. Countdown Logic
         // Set the final date: October 18, 2025, 5:00 PM IST
@@ -730,3 +730,4 @@
     </script>
 </body>
 </html>
+
