--- a/index.html
+++ b/index.html
@@ -427,8 +427,8 @@
         #submit-button {
             background: linear-gradient(90deg, var(--color-orange), var(--color-pink));
             box-shadow: 0 0 20px rgba(255, 79, 191, 0.5);
-            /* Resetting padding/margin to ensure tight alignment */
-            padding: 15px;
+            /* ENHANCED PADDING for better button prominence */
+            padding: 18px; 
             margin-top: 0; 
             border-radius: 10px;
             font-size: 1.2rem;
